--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>فرم تماس با ما</title>
 </head>
-<body style="direction: rtl; font-family: sans-serif; padding: 30px;">
+<body style="direction: rtl; font-family: sans-serif;">
   <h2>فرم تماس با ما</h2>
   <form id="contact-form">
     <input type="text" name="name" placeholder="نام شما" required><br><br>
@@ -16,39 +16,27 @@
   <script>
     document.getElementById("contact-form").addEventListener("submit", function(e) {
       e.preventDefault();
+
       const name = e.target.name.value;
       const email = e.target.email.value;
       const message = e.target.message.value;
 
-      const telegramToken = "7459290432:AAGwvnfEF25INBNrOKbT-dOiiaYmlQRvcWw";
-      const chatId = "7230121237";
-      const text = 📥 فرم جدید:
-
-👤 نام: ${name}
-📧 ایمیل: ${email}
-💬 پیام: ${message};
-
-      fetch(https://api.telegram.org/bot${7459290432:AAGwvnfEF25INBNrOKbT-dOiiaYmlQRvcWw}/sendMessage, {
+      fetch("https:https://script.google.com/macros/s/AKfycbw8ZKl6EAL4mYnCyVMrX8Nulxys4F6PvyP2Y7P5re9E0alG0jD8DLHlNbu9QmDjJW2Zuw/exec", { // 👈 اینجا لینک Google Script خودتو بذار
         method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          chat_id:7230121237,
-          text: text
-        })
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ name, email, message })
       })
       .then(res => {
         if (res.ok) {
-          alert("✅ پیام با موفقیت برای ربات ارسال شد!");
+          alert("✅ پیام با موفقیت ارسال شد!");
           e.target.reset();
         } else {
           alert("❌ خطا در ارسال پیام!");
         }
       })
       .catch(err => {
-        alert("❌ ارتباط برقرار نشد. لطفاً اینترنت یا توکن را بررسی کنید.");
-        console.error("Telegram Error:", err);
+        alert("❌ ارتباط برقرار نشد.");
+        console.error(err);
       });
     });
   </script>
